feat: A2A streaming, task cancellation, configurable embeddings, and Gemini 3.5 upgrade (#14)
* Small adaptations

* new steps

* new fixes

* another fixes

* done fixes

* Upgraded A2A SDK

* some fixes related to the switch to gemini 3.5

* new parts

* Added A2A streaming

* new changes to streaming logic

* new fixes, streaming + embedding

* added task cancelling for A2A and also fixed a skill

* streaming fixes

* new fixes

* ..

* Another streaming fixes

* Completed fixing streaming

* Cleanup

* security fixes

* pr review addressed